# torrenter-egui

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: rust.yml
cxx/: CMakeLists.txt  api.cpp  api.h
src/: bytes.rs  duration.rs  fs_tree.rs  main.rs  peers.rs  progress_bar.rs  tests.rs  toasts.rs  torrent.rs
src/controllers/: add_torrent.rs  message.rs  mod.rs  torrent.rs
src/models/: file.rs  fs_tree.rs  message.rs  mod.rs  peer.rs  tab.rs  torrent.rs
src/views/: add_torrent.rs  drop.rs  files.rs  general.rs  mod.rs  peers.rs  progress_bar.rs  tab.rs  tabs.rs  torrent.rs
