[package]
name = "torrenter"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
eframe = { version = "0.29.1", default-features = false, features = [
  # "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
  # "persistence",   # Enable restoring app state when restarting the app.
] }
egui = "0.29.1"
egui-toast = "0.15.0"
log = "0.4.22"
rfd = "0.15.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[build-dependencies]
bindgen = "0.70.1"
cc = "1.2.0"
cmake = "0.1.51"
